# chemigram

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
CONTRIBUTING/: index.html
IMPLEMENTATION/: index.html
LICENSING/: index.html
TODO/: index.html
adr/: index.html
adr/ADR-001-vocabulary-approach/: index.html
adr/ADR-002-set-semantics/: index.html
adr/ADR-003-three-foundational-disciplines/: index.html
adr/ADR-004-darktable-cli-invocation/: index.html
adr/ADR-005-subprocess-serialization/: index.html
adr/ADR-006-single-process/: index.html
adr/ADR-007-byoa/: index.html
adr/ADR-008-opaque-blob-carriers/: index.html
adr/ADR-009-path-a-vs-path-b/: index.html
adr/ADR-010-parser-user-entries-by-multi-name/: index.html
adr/ADR-011-reject-darktable-cli-style/: index.html
adr/ADR-012-apply-custom-presets-false/: index.html
adr/ADR-013-python-3-11/: index.html
adr/ADR-014-all-image-processing-via-darktable/: index.html
adr/ADR-015-three-layer-model/: index.html
adr/ADR-016-l1-empty-by-default/: index.html
adr/ADR-017-l2-two-flavors/: index.html
adr/ADR-018-per-image-dag/: index.html
adr/ADR-019-git-like-ref-structure/: index.html
adr/ADR-020-no-remote-merge-reflog/: index.html
adr/ADR-021-three-layer-mask-pattern/: index.html
adr/ADR-022-mask-registry/: index.html
adr/ADR-023-vocabulary-primitives-dtstyle-plus-manifest/: index.html
adr/ADR-024-authoring-discipline/: index.html
adr/ADR-025-wb-color-cal-coupling/: index.html
adr/ADR-026-vocabulary-modversion-pinned/: index.html
adr/ADR-027-local-only-session-data/: index.html
adr/ADR-028-configuration-formats/: index.html
adr/ADR-029-session-transcripts-jsonl/: index.html
adr/ADR-030-three-tier-context/: index.html
adr/ADR-031-propose-and-confirm/: index.html
adr/ADR-032-distribution-split/: index.html
adr/ADR-033-mcp-tool-surface/: index.html
adr/ADR-034-build-system-and-layout/: index.html
adr/ADR-035-uv-dev-environment/: index.html
adr/ADR-036-testing-strategy/: index.html
adr/ADR-037-ruff-linting-formatting/: index.html
adr/ADR-038-mypy-type-checking/: index.html
adr/ADR-039-pre-commit-hooks/: index.html
adr/ADR-040-ci-strategy/: index.html
adr/ADR-041-versioning-scheme/: index.html
adr/ADR-042-distribution-pypi/: index.html
adr/ADR-043-jinja2-versioned-templates/: index.html
adr/ADR-044-promptstore-api-and-manifest/: index.html
adr/ADR-045-prompt-versioning-independent-of-semver/: index.html
adr/ADR-046-golden-dataset-versioning/: index.html
adr/ADR-047-run-manifests-for-eval-reproducibility/: index.html
adr/ADR-048-multi-scope-taste-structure/: index.html
adr/ADR-049-vocabulary-starter-in-main-repo/: index.html
adr/ADR-050-parser-api-and-synthesizer-error-contract/: index.html
adr/ADR-051-same-module-set-replace/: index.html
adr/ADR-052-pipeline-stage-protocol/: index.html
adr/ADR-053-exif-auto-binding-rules/: index.html
adr/ADR-054-canonical-xmp-serialization/: index.html
adr/ADR-055-mask-storage-in-objects/: index.html
adr/ADR-056-mcp-tool-surface/: index.html
adr/ADR-057-mask-provider-protocol/: index.html
adr/ADR-058-default-masker-coarse-agent/: index.html
adr/ADR-059-context-loading-order/: index.html
adr/ADR-060-vocabulary-gap-schema/: index.html
adr/ADR-061-end-of-session-orchestration/: index.html
adr/ADR-062-reset-rewinds-current-branch/: index.html
adr/ADR-063-path-b-unblocking/: index.html
adr/ADR-064-vocabulary-authoring-workflow/: index.html
adr/ADR-066-reference-fixture-policy/: index.html
adr/ADR-067-pixel-assertion-protocol/: index.html
adr/ADR-068-darktable-version-gate-deferred/: index.html
adr/ADR-069-cli-alongside-mcp/: index.html
adr/ADR-070-cli-framework-typer/: index.html
adr/ADR-071-cli-mcp-thin-wrapper-discipline/: index.html
adr/ADR-072-cli-output-format-and-exit-codes/: index.html
adr/ADR-073-programmatic-vocabulary-authoring/: index.html
adr/ADR-074-built-in-geometric-mask-providers/: index.html
adr/ADR-075-ci-add-linux-matrix/: index.html
adr/ADR-076-drawn-mask-only-mask-architecture/: index.html
adr/ADR-077-path-c-default-for-parameterized-modules/: index.html
adr/ADR-078-vocabulary-manifest-parameters-schema/: index.html
adr/ADR-079-apply-primitive-value-argument/: index.html
adr/ADR-080-test-coverage-policy-parameterized-modules/: index.html
adr/ADR-081-parameterization-tiering-policy/: index.html
adr/ADR-082-modversion-drift-handling/: index.html
adr/ADR-083-hsl-color-mixer-via-colorequal/: index.html
adr/ADR-084-apply-time-mask-spec-semantics/: index.html
adr/ADR-085-parametric-mask-encoding/: index.html
adr/ADR-086-llm-vision-as-mask-provider/: index.html
api/: index.html
capability-survey/: index.html
diagrams/: index.html
doc-tree/: index.html
docs/: .pages  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSING.md  ROADMAP.md  TODO.md  agent-context.md  agent-prompt.md  capability-survey.md  chemigram.md  doc-tree.md  getting-started.md  index.md  layers.md  local-adjustments.md  onboarding.md  phase-2-playbook.md  phase-3-preview.md  photographer-workflows-survey.md  starter-vocabulary.md  testing.md
examples/: cli-agent-loop.py  cli-batch-watch.sh  iguana-galapagos.md  phase-0-notebook-working.md  phase-0-notebook.md
getting-started/: index.html
guides/: index.html
onboarding/: index.html
phase-2-playbook/: index.html
phase-3-preview/: index.html
photographer-workflows-survey/: index.html
prd/: index.html
rfc/: index.html
scripts/: audit-cli-imports.py  author-dtstyle.py  generate-bw-vocabulary.py  generate-cli-reference.py  generate-l2-looks-r3-cheap.py  generate-l2-looks-survey.py  generate-mask-shapes-gallery.py  generate-visual-proofs.py  pre-release-check.sh  release.sh  setup.sh  verify-prompts.sh  verify-vocab.sh
search/: search_index.json
stylesheets/: extra.css
testing/: index.html
tests/: README.md
vocabulary/: README.md
(+718 files in other folders)
