[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chemigram"
version = "1.4.0"
description = "Agent-driven photo editing on darktable, via MCP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Marko Mrdjenovic" },
]
keywords = ["darktable", "photography", "mcp", "agentic", "raw-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
]

# Runtime dependencies. Kept minimal per BYOA (ADR-007) and dt-orchestration-only
# (ADR-014). defusedxml for safely parsing dtstyle and XMP files (untrusted XML
# from contributor packs); exifread for L1 vocabulary auto-binding via camera+
# lens identity (Slice 1, RFC-015 → ADR-053; pure-Python, no native deps);
# Jinja2 for the prompt system (Slice 3); MCP for the agent protocol (Slice 3).
# Pillow may join when mask manipulation arrives in Slice 4.
dependencies = [
    "mcp>=1.27",
    "defusedxml>=0.7",
    "exifread>=3.0",
    "Jinja2>=3.1",
    # Pillow lands here for the `compare` MCP tool's side-by-side stitch.
    # Pure infrastructure (image reading/writing/composition) — does not
    # violate BYOA (ADR-007) or dt-orchestration-only (ADR-014). When Slice 4
    # adds the masking pipeline, Pillow gets reused for raster mask handling.
    "Pillow>=10.0",
    # NumPy lands in v1.4.0 with the built-in geometric mask providers
    # (ADR-074). Pure numerical infrastructure for per-pixel mask fields
    # (gradient/radial/rectangle distance computations); the alternative is
    # error-prone Pillow gymnastics. Not AI per ADR-007 — same tier as Pillow.
    "numpy>=1.26",
    # Typer for the CLI adapter (RFC-020 / ADR-070; v1.3.0+). Brings Click +
    # Rich transitively. CLI is a thin wrapper over chemigram.core, mirroring
    # the MCP tool surface verb-for-verb (ADR-071). uv.lock pins exact
    # versions for CI reproducibility — no need for an upper bound here.
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    # Test framework (ADR-036)
    "pytest>=8.0",
    "pytest-cov>=5.0",
    # Lint + format (ADR-037)
    "ruff>=0.6",
    # Type checking (ADR-038)
    "mypy>=1.10",
    # Pre-commit (ADR-039)
    "pre-commit>=3.7",
    # Build tooling (ADR-042)
    "build>=1.2",
    "twine>=5.0",
]

# Docs site (MkDocs + Material). Pure-Python toolchain; matches the
# project's "no Node.js" stance. Build via `make docs-build`; serve
# with live reload via `make docs-serve`. Deployed to GitHub Pages
# by .github/workflows/docs.yml on every push to main.
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mkdocs-awesome-pages-plugin>=2.9",
]

[project.scripts]
chemigram-mcp = "chemigram.mcp.server:main"
chemigram = "chemigram.cli.main:app"

[project.urls]
Homepage = "https://github.com/chipi/chemigram"
Repository = "https://github.com/chipi/chemigram"
Issues = "https://github.com/chipi/chemigram/issues"

# ---------------------------------------------------------------------------
# Hatchling build config (ADR-034, ADR-049)
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/chemigram"]

# Include the starter vocabulary (per ADR-049) as package data so
# `pip install chemigram` ships with a working starter pack out of the box.
[tool.hatch.build.targets.wheel.force-include]
"vocabulary/starter" = "chemigram/_starter_vocabulary"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "vocabulary/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Ruff (ADR-037) — lint + format in one tool
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "S",      # flake8-bandit (security)
    "C90",    # mccabe complexity
    "RUF",    # ruff-specific rules
]
ignore = [
    "S101",   # assert used (fine in tests)
    "S603",   # subprocess call without shell=True (we want this; darktable-cli)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]
# Color-math conventions follow CIE notation: uppercase L (lightness), C
# (chroma), T (term), S (lightness factor), G/R/RT (gain/rotation terms).
# Renaming would obscure the algorithm.
"src/chemigram/core/assertions.py" = ["N802", "N803", "N806"]
"tests/fixtures/reference-targets/generate_synthetic.py" = ["N802", "N803", "N806"]
"tests/integration/test_reference_synthetic.py" = ["N802", "N803", "N806"]
"tests/unit/core/test_assertions.py" = ["N802", "N803", "N806"]
# Typer's API is built on `typer.Option(...)` and `typer.Argument(...)` as
# argument defaults — that's the canonical idiom (RFC-020 / ADR-070).
# B008 fires false-positive on every CLI command function.
"src/chemigram/cli/main.py" = ["B008"]
"src/chemigram/cli/commands/*.py" = ["B008"]
# The CLI reference HEADER table contains long markdown rows; line-length
# rules don't help readability for tabular data.
"scripts/generate-cli-reference.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# Mypy (ADR-038) — strict on chemigram.core, looser elsewhere
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "chemigram.core.*"
strict = true

[[tool.mypy.overrides]]
module = ["chemigram.mcp.*", "tests.*"]
strict = false
warn_return_any = false
disallow_untyped_defs = false

# CLI is a thin wrapper using Typer; Typer's decorators are untyped at
# the wrapped-function level, so disallow_untyped_decorators must be off.
[[tool.mypy.overrides]]
module = "chemigram.cli.*"
strict = false
warn_return_any = false
disallow_untyped_defs = false
disallow_untyped_decorators = false

# Third-party libraries that may not have stubs
[[tool.mypy.overrides]]
module = ["mcp.*", "defusedxml.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest (ADR-036) — three tiers
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-q",
]
markers = [
    "unit: pure-logic tests, no I/O, no subprocess (fast)",
    "integration: tests using real .dtstyle files in temp filesystem (no darktable required)",
    "e2e: end-to-end tests that invoke darktable-cli (require darktable installed)",
]

[tool.coverage.run]
source = ["src/chemigram"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
